--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -51,7 +51,7 @@
             android:ellipsize="end" />
 
         <TextView
-            android:id="@+id/dailyExpensesDate"
+            android:id="@+id/dailyExpensesCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
