--- a/app/src/main/res/layout/item_budget_expense_header.xml
+++ b/app/src/main/res/layout/item_budget_expense_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#6C6A6A"
+    android:background="#292929"
     android:layout_marginBottom="8dp"
     android:padding="8dp">
 
