--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/manrope_bold"
-                android:text="Latest Events"
+                android:text="Latest Expenses"
                 android:textColor="@color/orange"
                 android:textSize="18sp" />
 
@@ -176,7 +176,7 @@
                 android:text="See all"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                app:cornerRadius="30dp" />
+                app:cornerRadius="12dp" />
         </LinearLayout>
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -213,6 +213,7 @@
             android:id="@+id/latestExpensesRecycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="105dp"
             android:clipToPadding="false"
             android:paddingTop="4dp"
