--- a/app/src/main/res/layout/activity_budget_details.xml
+++ b/app/src/main/res/layout/activity_budget_details.xml
@@ -77,7 +77,7 @@
                         android:id="@+id/membersLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Members"
+                        android:text="Members' expenses"
                         android:fontFamily="@font/manrope_bold"
                         android:textColor="@color/white"
                         android:textSize="18sp" />
@@ -133,7 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/manrope_bold"
-                android:text="Expenses"
+                android:text="All Expenses"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
