--- a/app/src/main/res/layout/activity_group_settlement.xml
+++ b/app/src/main/res/layout/activity_group_settlement.xml
@@ -71,6 +71,43 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Group spent:"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                android:fontFamily="@font/manrope_bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/allGroupExpenses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:textColor="@color/orange"
+            android:textSize="14sp"
+            android:fontFamily="@font/manrope_bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/expense_bg"
+        android:paddingHorizontal="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:paddingVertical="12dp"
+        android:gravity="center_vertical">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="You're waiting for"
                 android:textColor="@color/white"
                 android:textSize="14sp"
