--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -56,6 +56,7 @@
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- RECEIVABLE -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/receivableBlock"
             android:layout_width="0dp"
@@ -83,19 +84,44 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/receivableAmount"
+            <LinearLayout
+                android:id="@+id/receivableAmountRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:fontFamily="@font/manrope_bold"
-                android:text="230,26"
-                android:textColor="#000000"
-                android:textSize="20sp"
+                android:orientation="horizontal"
+                android:gravity="end|center_vertical"
+                android:baselineAligned="false"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:id="@+id/receivableAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/manrope_bold"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:layout_marginEnd="8dp"
+                    android:textAlignment="viewEnd"
+                    android:gravity="end"
+                    android:includeFontPadding="false"
+                    android:visibility="gone" />
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/receivableLoading"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:visibility="visible"
+                    android:indeterminate="true"
+                    app:indicatorColor="@color/grey"
+                    app:indicatorInset="0dp"
+                    app:trackThickness="3dp"
+                    app:indicatorSize="24dp" />
+            </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <!-- DEBT -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/debtBlock"
             android:layout_width="0dp"
@@ -122,20 +148,45 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/debtAmount"
+            <LinearLayout
+                android:id="@+id/debtAmountRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:fontFamily="@font/manrope_bold"
-                android:text="230,26"
-                android:textColor="#000000"
-                android:textSize="20sp"
+                android:orientation="horizontal"
+                android:gravity="end|center_vertical"
+                android:baselineAligned="false"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:id="@+id/debtAmount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/manrope_bold"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:layout_marginEnd="8dp"
+                    android:textAlignment="viewEnd"
+                    android:gravity="end"
+                    android:includeFontPadding="false"
+                    android:visibility="gone" />
+
+                <com.google.android.material.progressindicator.CircularProgressIndicator
+                    android:id="@+id/debtLoading"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:visibility="visible"
+                    android:indeterminate="true"
+                    app:indicatorColor="@color/grey"
+                    app:indicatorInset="0dp"
+                    app:trackThickness="3dp"
+                    app:indicatorSize="24dp" />
+            </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Latest expenses list -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/latestExpenses"
         android:layout_width="match_parent"
@@ -183,16 +234,16 @@
             android:id="@+id/loadingProgressBar"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:visibility="gone"
             android:indeterminate="true"
             app:indicatorColor="@color/orange"
             app:indicatorInset="0dp"
+            app:trackThickness="4dp"
             app:indicatorSize="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.37"
-            app:trackThickness="4dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/noDataText"
