--- a/app/src/main/res/layout/item_budgets.xml
+++ b/app/src/main/res/layout/item_budgets.xml
@@ -55,6 +55,21 @@
             android:textSize="12sp"
             android:layout_marginStart="4dp"
             android:fontFamily="@font/manrope_bold" />
+
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/statusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="you're settled"
+        android:textSize="12sp"
+        android:textColor="@color/grey_light"
+        android:fontFamily="@font/manrope_bold"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
